# astrotraders

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yaml  publish.yaml  tests.yaml
astrotraders/: __init__.py
astrotraders/api/: client.py  exceptions.py  schemas.py  utils.py  wrapper.py
astrotraders/api/resources/: __init__.py  agents.py  base.py  contracts.py  factions.py  fleet.py  server.py  systems.py
docs/: conf.py  index.rst
docs/source/: api.rst  usage.rst
tests/: conftest.py  test_resources.py
