[tool.poetry]
name = "astrotraders"
version = "1.0.0"
description = "A typed, handwrited and powerful spacetraders API wrapper"
authors = ["kiriharu <me@kiriha.ru>"]
readme = "README.md"
packages = [{include = "astrotraders"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
httpx = "^0.24.0"
orjson = "^3.8.12"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
mypy = "^1.3.0"
furo = "^2023.3.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[project.urls]
"Homepage" = "https://github.com/kiriharu/astrotraders"
"Bug Tracker" = "https://github.com/kiriharu/astrotraders/issues"
